<resources>
    <string name="app_name">FlipShop</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="menu_cart">Cart</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_shopbycategory">Shop by Category</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_Account">Account</string>

    <string name="admob_id">ca-app-pub-7998636286313318/6870968445</string>
</resources>