<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.oakspro.flipshop.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_shopbycategory"
        android:name="com.oakspro.flipshop.ui.shopbycategory.ShopbycategoryFragment"
        android:label="@string/menu_shopbycategory"
        tools:layout="@layout/fragment_shopbycategory" />


    <fragment
        android:id="@+id/nav_orders"
        android:name="com.oakspro.flipshop.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.oakspro.flipshop.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.oakspro.flipshop.ui.wishlist.WishlistFragment"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_wishlist"
        />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.oakspro.flipshop.ui.account.AccountFragment"
        android:label="@string/menu_Account"
        tools:layout="@layout/fragment_account"
        />
</navigation>